deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: eventarz-zuul
  name: eventarz-zuul
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventarz-zuul
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: eventarz-zuul
    spec:
      containers:
        - image: eventarzcontainerregistry.azurecr.io/eventarz-zuul:latest
          name: eventarz-zuul
          resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: eventarz-zuul
  name: eventarz-zuul
spec:
  ports:
    - name: 443-443
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: eventarz-zuul
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventarz-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: eventarz-zuul
      port:
        number: 443
  rules:
    - host: eventarz.b9f7d10a907f4d009411.southcentralus.aksapp.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eventarz-zuul
                port:
                  number: 443
